saving scrollable state for search fragment

--- a/app/src/main/res/layout/news_list.xml
+++ b/app/src/main/res/layout/news_list.xml
@@ -55,6 +55,7 @@
             android:minHeight="100dp"
             android:layout_marginLeft="2dp"
             android:id="@+id/image1"
+            android:layout_gravity="end"
             android:src="@mipmap/ic_launcher"/>
     </LinearLayout>
     <TextView
